<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mine_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_mine_login" />
        <item
            android:id="@+id/contribution"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_contribution" />
        <item
            android:id="@+id/fundraising"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_fundraising" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_set" />
    </group>

    <item android:title="@string/action_about">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_news" />
            <item
                android:id="@+id/nav_telephone"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_telephone" />
        </menu>
    </item>

</menu>