<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_message"
        android:orderInCategory="100"
        android:title="@string/action_message"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_friends"
        android:orderInCategory="100"
        android:title="@string/action_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dynamic"
        android:orderInCategory="100"
        android:title="@string/action_dynamic"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_collection"
        android:orderInCategory="100"
        android:title="@string/action_collection"
        app:showAsAction="never" />
</menu>