<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:background="@mipmap/m"
    >
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/m1"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/m2"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m3"
                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/m4"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/m5"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:hint="@string/m6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/m7"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/m8"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m9"
                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m10"
                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m11"
                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m12"
                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/m13"
                    android:textSize="15dp"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:textColor="#363636"
                    android:textColorHint="#63B8FF" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/action_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:background="#63B8FF"
                android:text="@string/action_submit"
                android:textColor="#FFF0F5"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>